maze.lessons.maze.island.IslandMaze.scala.error
Escaper:6: error: ';' expected but 'else' found.
  	} else if (!estFaceMur() && !(getDirection==Direction.NORTH)) {
          ^Escaper:16: error: expected class or object definition
def keepHandOnSideWall() { 
^Escaper:28: error: expected class or object definition
def murGauche() {
^Escaper:40: error: Unmatched closing brace '}' ignored here
}
^